createUser, tested in postman. Test ok. Saved in database ok

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,11 @@
 PORT = 3000
 PORT = 8000
 
-DATABASE_PATH = mongodb://localhost:27017/elins_blog
+DATABASE_PATH = mongodb://localhost:27017/elinsblog
 
-MONGOOSE_LIVE_URI = mongodb+srv://eomolle:mxFo7XWrsQ9EtCPR@elinsblog.wfkbky3.mongodb.net/?retryWrites=true&w=majority&appName=Elins_blog
+# MONGOOSE_LIVE_URI = mongodb+srv://eomolle:mxFo7XWrsQ9EtCPR@elinsblog.wfkbky3.mongodb.net/?retryWrites=true&w=majority&appName=elinsblog
+
+MONGOOSE_LIVE_URI = mongodb+srv://eomolle:mxFo7XWrsQ9EtCPR@Elinsblog.wfkbky3.mongodb.net/elins_blog?retryWrites=true&w=majority&appName=elins_blog
 
 ACCESS_TOKEN_SECRET = secret
 
