login done, works in backend and also from frontend. Hashing, token and jwt_access_secret etc used

--- a/backend/.env
+++ b/backend/.env
@@ -7,6 +7,6 @@ DATABASE_PATH = mongodb://localhost:27017/elinsblog
 
 MONGOOSE_LIVE_URI = mongodb+srv://eomolle:mxFo7XWrsQ9EtCPR@Elinsblog.wfkbky3.mongodb.net/elins_blog?retryWrites=true&w=majority&appName=elins_blog
 
-ACCESS_TOKEN_SECRET = secret
+JWT_ACCESS_SECRET = secret
 
-REFRESH_TOKEN_SECRET = refreshSecret
+JWT_REFRESH_SECRET = refreshSecret
